--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+test-results
 node_modules
 
 # Output
@@ -21,3 +22,5 @@ Thumbs.db
 # Vite
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+*storybook.log
