--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^2.46.1",
+		"formsnap": "^1.0.1",
 		"globals": "^15.14.0",
 		"lucide-svelte": "^0.474.0",
 		"prettier": "^3.4.2",
@@ -42,12 +43,14 @@
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"svelte-motion": "^0.12.2",
+		"sveltekit-superforms": "^2.23.1",
 		"tailwind-merge": "^2.6.0",
 		"tailwind-variants": "^0.3.1",
 		"tailwindcss": "^3.4.17",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0",
-		"vitest": "^3.0.0"
+		"vitest": "^3.0.0",
+		"zod": "^3.24.1"
 	}
 }
