--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
+		"@types/node": "^22.13.10",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^0.22.0",
 		"clsx": "^2.1.1",
@@ -52,5 +53,8 @@
 		"vite": "^6.0.0",
 		"vitest": "^3.0.0",
 		"zod": "^3.24.1"
+	},
+	"dependencies": {
+		"tailwindcss-animate": "^1.0.7"
 	}
 }
