--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
 		"@neoconfetti/svelte": "^2.0.0",
 		"@playwright/test": "^1.49.1",
 		"@sveltejs/adapter-node": "^5.2.11",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@sveltejs/kit": "^2.20.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
@@ -41,21 +41,23 @@
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.10",
-		"svelte": "^5.0.0",
+		"svelte": "^5.23.1",
 		"svelte-check": "^4.0.0",
 		"svelte-motion": "^0.12.2",
 		"sveltekit-superforms": "^2.23.1",
 		"tailwind-merge": "^2.6.0",
 		"tailwind-variants": "^0.3.1",
 		"tailwindcss": "^3.4.17",
-		"typescript": "^5.0.0",
+		"typescript": "^5.8.2",
 		"typescript-eslint": "^8.20.0",
-		"vite": "^6.0.0",
+		"vite": "^6.2.2",
 		"vitest": "^3.0.0",
 		"zod": "^3.24.1"
 	},
 	"dependencies": {
-		"tailwindcss-animate": "^1.0.7",
-		"@supabase/supabase-js": "^2.48.1"
+		"@supabase/ssr": "^0.6.1",
+		"@supabase/supabase-js": "^2.48.1",
+		"@sveltejs/adapter-auto": "^4.0.0",
+		"tailwindcss-animate": "^1.0.7"
 	}
 }
