Adds some dependencies

--- a/package.json
+++ b/package.json
@@ -58,6 +58,13 @@
 		"@supabase/ssr": "^0.6.1",
 		"@supabase/supabase-js": "^2.48.1",
 		"@sveltejs/adapter-auto": "^4.0.0",
+		"@turf/turf": "^7.2.0",
+		"@types/leaflet": "^1.9.17",
+		"@types/leaflet.markercluster": "^1.5.5",
+		"leaflet": "^1.9.4",
+		"leaflet-boundary-canvas": "^1.0.0",
+		"leaflet.markercluster": "^1.5.3",
+		"svelte-leafletjs": "^2.0.0",
 		"tailwindcss-animate": "^1.0.7"
 	}
 }
