--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^0.22.0",
 		"clsx": "^2.1.1",
+		"embla-carousel-svelte": "^8.5.2",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^2.46.1",
@@ -48,7 +49,7 @@
 		"tailwind-merge": "^2.6.0",
 		"tailwind-variants": "^0.3.1",
 		"tailwindcss": "^3.4.17",
-		"typescript": "^5.8.2",
+		"typescript": "^5.7.3",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.2",
 		"vitest": "^3.0.0",
@@ -61,6 +62,8 @@
 		"@turf/turf": "^7.2.0",
 		"@types/leaflet": "^1.9.17",
 		"@types/leaflet.markercluster": "^1.5.5",
+		"flowbite": "^3.1.2",
+		"flowbite-svelte": "^0.48.4",
 		"leaflet": "^1.9.4",
 		"leaflet-boundary-canvas": "^1.0.0",
 		"leaflet.markercluster": "^1.5.3",
