chore: Mise à jour du fichier .gitignore pour inclure des fichiers supplémentaires

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ package-lock.json
 package-lock.json
 package-lock.json
 package-lock.json
+package-lock.json
+Svelte.pdf
+.cursor/rules/bienvenue.mdc
+package-lock.json
