--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"@supabase/ssr": "^0.6.1",
 		"@supabase/supabase-js": "^2.48.1",
 		"@sveltejs/adapter-auto": "^4.0.0",
+		"@sveltejs/adapter-vercel": "^5.10.2",
 		"@turf/turf": "^7.2.0",
 		"@types/leaflet": "^1.9.17",
 		"@types/leaflet.markercluster": "^1.5.5",
