--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "engines": {
     "node": ">=18"
   },
+  "overrides": {
+    "esbuild": "0.25.12"
+  },
   "packageManager": "bun@1.3.2",
   "workspaces": [
     "apps/*",
